added report for sync-6.3.x-2016.03.14